bindings/sml/src/lib_proven.sml

(* SPDX-License-Identifier: PMPL-1.0-or-later *)
(* Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk> *)

(* lib_proven.sml -- Raw C FFI declarations for libproven.
 *
 * This module provides the lowest-level Standard ML interface to libproven,
 * the formally verified safety library (Idris 2 core, Zig FFI bridge, C ABI).
 *
 * ALL computation is performed in verified Idris 2 code. This file contains
 * data marshaling only -- NO logic is reimplemented.
 *
 * Targets:
 *   - MLton:  Uses _import / _address pragmas and MLton.Pointer
 *   - SML/NJ: Uses the Unsafe.CInterface (loaded via CM)
 *
 * The MLton-specific code is conditionally compiled; SML/NJ users include
 * the .cm file instead of the .mlb file.
 *)

(* -------------------------------------------------------------------------- *)
(* Status Codes                                                               *)
(* -------------------------------------------------------------------------- *)

structure ProvenStatus =
struct
  type t = Int32.int

  val OK : t                   = 0 : Int32.int
  val ERR_NULL_POINTER : t     = ~1 : Int32.int
  val ERR_INVALID_ARGUMENT : t = ~2 : Int32.int
  val ERR_OVERFLOW : t         = ~3 : Int32.int
  val ERR_UNDERFLOW : t        = ~4 : Int32.int
  val ERR_DIVISION_BY_ZERO : t = ~5 : Int32.int
  val ERR_PARSE_FAILURE : t    = ~6 : Int32.int
  val ERR_VALIDATION_FAILED : t= ~7 : Int32.int
  val ERR_OUT_OF_BOUNDS : t    = ~8 : Int32.int
  val ERR_ENCODING_ERROR : t   = ~9 : Int32.int
  val ERR_ALLOCATION_FAILED : t= ~10 : Int32.int
  val ERR_NOT_IMPLEMENTED : t  = ~99 : Int32.int

  fun isOk (s : t) : bool = (s = OK)
  fun isFail (s : t) : bool = (s <> OK)

  fun toString (s : t) : string =
    case s of
      0  => "OK"
    | ~1 => "ERR_NULL_POINTER"
    | ~2 => "ERR_INVALID_ARGUMENT"
    | ~3 => "ERR_OVERFLOW"
    | ~4 => "ERR_UNDERFLOW"
    | ~5 => "ERR_DIVISION_BY_ZERO"
    | ~6 => "ERR_PARSE_FAILURE"
    | ~7 => "ERR_VALIDATION_FAILED"
    | ~8 => "ERR_OUT_OF_BOUNDS"
    | ~9 => "ERR_ENCODING_ERROR"
    | ~10 => "ERR_ALLOCATION_FAILED"
    | ~99 => "ERR_NOT_IMPLEMENTED"
    | _  => "UNKNOWN(" ^ Int32.toString s ^ ")"
end

(* -------------------------------------------------------------------------- *)
(* Result Record Types                                                        *)
(* -------------------------------------------------------------------------- *)

(* These mirror the C structs declared in proven.h.
 * MLton flattens structs returned by _import into tuples or records
 * accessed via MLton.Pointer offsets.  We use pointer-based access for
 * all struct returns to be safe across both compilers. *)

structure ProvenResult =
struct
  (* Integer result: { status: int32, value: int64 } *)
  type int_result = { status : Int32.int, value : Int64.int }

  (* Boolean result: { status: int32, value: bool } *)
  type bool_result = { status : Int32.int, value : bool }

  (* String result: { status: int32, ptr: pointer, len: word } *)
  type string_result = { status : Int32.int, ptr : MLton.Pointer.t, len : Word64.word }

  (* Float result: { status: int32, value: real } *)
  type float_result = { status : Int32.int, value : Real64.real }

  (* IPv4 result: { status: int32, o1..o4: word8 } *)
  type ipv4_result = { status : Int32.int, o1 : Word8.word, o2 : Word8.word,
                        o3 : Word8.word, o4 : Word8.word }

  (* DateTime components *)
  type datetime = { year : Int32.int, month : Word8.word, day : Word8.word,
                    hour : Word8.word, minute : Word8.word, second : Word8.word,
                    nanosecond : Word32.word, tzOffsetMinutes : Int16.int }

  type datetime_result = { status : Int32.int, dt : datetime }
end

(* -------------------------------------------------------------------------- *)
(* Raw FFI Imports (MLton)                                                    *)
(* -------------------------------------------------------------------------- *)

(* All C functions are imported via MLton _import.  Each function returns its
 * result through a caller-allocated buffer (MLton.Pointer) to handle C struct
 * return values portably.
 *
 * Convention: We import the C function and then immediately marshal the raw
 * pointer data into SML records in the higher-level wrappers. *)

structure LibProven =
struct

  (* ---- Lifecycle --------------------------------------------------------- *)

  val init = _import "proven_init" public : unit -> Int32.int;
  val deinit = _import "proven_deinit" public : unit -> unit;
  val isInitialized = _import "proven_is_initialized" public : unit -> bool;

  (* ---- Memory Management ------------------------------------------------- *)

  val freeString = _import "proven_free_string" public : MLton.Pointer.t -> unit;

  (* ---- Version ----------------------------------------------------------- *)

  val ffiAbiVersion = _import "proven_ffi_abi_version" public : unit -> Word32.word;
  val versionMajor = _import "proven_version_major" public : unit -> Word32.word;
  val versionMinor = _import "proven_version_minor" public : unit -> Word32.word;
  val versionPatch = _import "proven_version_patch" public : unit -> Word32.word;
  val moduleCount = _import "proven_module_count" public : unit -> Word32.word;

  (* ---- SafeMath ---------------------------------------------------------- *)

  (* C struct returns are handled via pointer-based marshaling.
   * MLton can return structs from C, but the layout depends on ABI.
   * We use a pattern where we call the C function and read the struct
   * fields from the return via MLton's struct flattening.
   *
   * For ProvenIntResult { int32_t status; int64_t value; }:
   *   MLton flattens this to (Int32.int * Int64.int) when returned by value.
   *)

  val mathAddChecked =
    _import "proven_math_add_checked" public : Int64.int * Int64.int -> Int32.int * Int64.int;
  val mathSubChecked =
    _import "proven_math_sub_checked" public : Int64.int * Int64.int -> Int32.int * Int64.int;
  val mathMulChecked =
    _import "proven_math_mul_checked" public : Int64.int * Int64.int -> Int32.int * Int64.int;
  val mathDiv =
    _import "proven_math_div" public : Int64.int * Int64.int -> Int32.int * Int64.int;
  val mathMod =
    _import "proven_math_mod" public : Int64.int * Int64.int -> Int32.int * Int64.int;
  val mathAbsSafe =
    _import "proven_math_abs_safe" public : Int64.int -> Int32.int * Int64.int;
  val mathClamp =
    _import "proven_math_clamp" public : Int64.int * Int64.int * Int64.int -> Int64.int;
  val mathPowChecked =
    _import "proven_math_pow_checked" public : Int64.int * Word32.word -> Int32.int * Int64.int;

  (* ---- SafeString -------------------------------------------------------- *)

  val stringIsValidUtf8 =
    _import "proven_string_is_valid_utf8" public : Word8.word vector * Word64.word -> Int32.int * bool;
  val stringEscapeSql =
    _import "proven_string_escape_sql" public : Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;
  val stringEscapeHtml =
    _import "proven_string_escape_html" public : Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;
  val stringEscapeJs =
    _import "proven_string_escape_js" public : Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;

  (* ---- SafePath ---------------------------------------------------------- *)

  val pathHasTraversal =
    _import "proven_path_has_traversal" public : Word8.word vector * Word64.word -> Int32.int * bool;
  val pathSanitizeFilename =
    _import "proven_path_sanitize_filename" public : Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;

  (* ---- SafeEmail --------------------------------------------------------- *)

  val emailIsValid =
    _import "proven_email_is_valid" public : Word8.word vector * Word64.word -> Int32.int * bool;

  (* ---- SafeUrl ----------------------------------------------------------- *)

  (* URL parsing returns a complex struct; we use a helper C shim or read
   * fields via pointer offsets.  For the SML binding we provide a simpler
   * interface: parse returns a string result with the normalized URL, and
   * individual component accessors work on the opaque pointer. *)

  (* We import the URL parse which returns ProvenUrlResult by pointer. *)
  val urlParse_raw =
    _import "proven_url_parse" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val urlFree =
    _import "proven_url_free" public : MLton.Pointer.t -> unit;

  (* ---- SafeNetwork ------------------------------------------------------- *)

  val networkParseIpv4 =
    _import "proven_network_parse_ipv4" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val networkIpv4IsPrivate_raw =
    _import "proven_network_ipv4_is_private" public : Word8.word * Word8.word * Word8.word * Word8.word -> bool;
  val networkIpv4IsLoopback_raw =
    _import "proven_network_ipv4_is_loopback" public : Word8.word * Word8.word * Word8.word * Word8.word -> bool;

  (* ---- SafeCrypto -------------------------------------------------------- *)

  val cryptoConstantTimeEq =
    _import "proven_crypto_constant_time_eq" public :
      Word8.word vector * Word64.word * Word8.word vector * Word64.word -> Int32.int * bool;
  val cryptoRandomBytes =
    _import "proven_crypto_random_bytes" public : MLton.Pointer.t * Word64.word -> Int32.int;

  (* ---- SafeJson ---------------------------------------------------------- *)

  val jsonIsValid =
    _import "proven_json_is_valid" public : Word8.word vector * Word64.word -> Int32.int * bool;
  val jsonGetType =
    _import "proven_json_get_type" public : Word8.word vector * Word64.word -> Int32.int;

  (* ---- SafeDateTime ------------------------------------------------------ *)

  val datetimeParse_raw =
    _import "proven_datetime_parse" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val datetimeFormatIso8601_raw =
    _import "proven_datetime_format_iso8601" public : MLton.Pointer.t -> Int32.int * MLton.Pointer.t * Word64.word;
  val datetimeIsLeapYear =
    _import "proven_datetime_is_leap_year" public : Int32.int -> bool;
  val datetimeDaysInMonth =
    _import "proven_datetime_days_in_month" public : Int32.int * Word8.word -> Word8.word;

  (* ---- SafeFloat --------------------------------------------------------- *)

  val floatDiv =
    _import "proven_float_div" public : Real64.real * Real64.real -> Int32.int * Real64.real;
  val floatIsFinite =
    _import "proven_float_is_finite" public : Real64.real -> bool;
  val floatIsNan =
    _import "proven_float_is_nan" public : Real64.real -> bool;
  val floatSqrt =
    _import "proven_float_sqrt" public : Real64.real -> Int32.int * Real64.real;
  val floatLn =
    _import "proven_float_ln" public : Real64.real -> Int32.int * Real64.real;

  (* ---- SafeHex ----------------------------------------------------------- *)

  val hexEncode =
    _import "proven_hex_encode" public : Word8.word vector * Word64.word * bool -> Int32.int * MLton.Pointer.t * Word64.word;
  val hexDecode_raw =
    _import "proven_hex_decode" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val hexFree =
    _import "proven_hex_free" public : MLton.Pointer.t -> unit;

  (* ---- SafeChecksum ------------------------------------------------------ *)

  val checksumCrc32 =
    _import "proven_checksum_crc32" public : Word8.word vector * Word64.word -> Int32.int * Int64.int;
  val checksumVerifyCrc32 =
    _import "proven_checksum_verify_crc32" public : Word8.word vector * Word64.word * Word32.word -> Int32.int * bool;

  (* ---- SafeColor --------------------------------------------------------- *)
